[Tags, Fix] Fixes in tags for follow

--- a/tpe_paw/webapp/src/main/resources/i18n/messages.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages.properties
@@ -132,6 +132,7 @@ error.403.snippet.fav=Unauthorized access! You can only favorite snippets when y
 error.403.snippet.report.reputation=Unauthorized access! You can only report snippets when you are logged in and have a high enough reputation.
 error.403.snippet.report.owner=Unauthorized access! You cannot report your own snippet!
 error.403.snippet.flag=Unauthorized access! Only admins can flag snippets.
+error.403.tag.follow=Unathorized access! You must be logged in to follow a tag
 error.403.snippet.report.dismiss=Unauthorized access! Only snippet owners can dismiss reports!
 error.403.anonymous=You can only access this page if you are not logged in.
 error.403.profile.owner=Unauthorized access! This content can only be viewed by the owner of the profile.
