--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -133,6 +133,7 @@ error.403.snippet.report.reputation=¡Acceso no autorizado! Solo puedes reportar
 error.403.snippet.report.owner=¡Acceso no autorizado! No puedes reportar tus propios snippets.
 error.403.snippet.report.dismiss=¡Acceso no autorizado! Solo el dueño del snippet puede descartar reportes.
 error.403.snippet.flag=¡Acceso no autorizado! Solo los administradores pueden marcar snippets
+error.403.tag.follow=¡Acceso no autorizado! Solo puedes seguir tags si inicias sesión
 error.403.anonymous=Solo puedes acceder a esta página si no inicias sesión
 error.403.profile.owner=¡Acceso no autorizado! Este contenido es exclusivo para el dueño del perfil.
 error.403.name=Prohibido
