--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -134,6 +134,7 @@ error.403.snippet.report.owner=Unauthorized access! You cannot report your own s
 error.403.snippet.report.dismiss=Unauthorized access! Only snippet owners can dismiss reports!
 error.403.snippet.flag=Unauthorized access! Only admins can flag snippets.
 error.403.profile.owner=Unauthorized access! This content can only be viewed by the owner of the profile.
+error.403.tag.follow=Unathorized access! You must be logged in to follow a tag
 error.403.anonymous=You can only access this page if you are not logged in
 error.403.name=Forbidden
 error.404=This Content Isn't Available Right Now 
