[Presentation, Fix] Feedback when updating user profile data and fixed no snippets text showing while loading

--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -113,6 +113,7 @@
       "editDescription": "Edit description",
       "cancel": "Cancel",
       "done": "Done",
+      "profileInfoUpdated": "Profile information updated!",
       "verifyAccount": {
         "title": "Verify your account",
         "text1": "Your email has not been verified, meaning you will not receive any emails from us.",
