--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -129,13 +129,15 @@ error.401.snippet.create=Unauthorized access! Must be logged in to create a snip
 error.403.snippet.delete=Unauthorized request! You can only delete snippets you own.
 error.401.snippet.vote=Unauthorized access! You can only vote for snippets when you are logged in.
 error.401.snippet.fav=Unauthorized access! You can only favorite snippets when you are logged in.
-error.403.snippet.report.reputation=Unauthorized access! You can only report snippets when you are logged in and have a high enough reputation.
+error.401.snippet.report=Unauthorized access! You can only report snippets when you are logged in.
+error.403.snippet.report.reputation=Unauthorized access! You can only report snippets when you are have a high enough reputation.
 error.403.snippet.report.owner=Unauthorized access! You cannot report your own snippet!
 error.403.snippet.report.dismiss=Unauthorized access! Only snippet owners can dismiss reports!
-error.403.snippet.flag=Unauthorized access! Only admins can flag snippets.
+error.401.snippet.flag=Unauthorized access! Only admins can flag snippets.
 error.403.profile.owner=Unauthorized access! This content can only be viewed by the owner of the profile.
 error.403.snippet.create=Forbidden access! You can't create snippets
 error.401.tag.follow=Unathorized access! You must be logged in to follow a tag
+error.401.user.profile.owner = Unathorized access! You must be logged in to modify your profile
 error.403.anonymous=You can only access this page if you are not logged in
 error.403.name=Forbidden
 error.404=This Content Isn't Available Right Now 
