--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -39,7 +39,7 @@
       "showFilters": "Mostrar filtros"
     },
     "languages": {
-      "title": "Lenguaejs",
+      "title": "Lenguajes",
       "languageSnippets": "Snippets para el lenguaje: {langName}"
     },
     "tags": {
@@ -72,7 +72,7 @@
       },
       "snippetDetail": {
         "report": {
-          "whatIsWrong": "Que hay de malo con este snippet?",
+          "whatIsWrong": "Qué hay de malo con este snippet?",
           "confirm": "Confirmar",
           "cancel": "Cancelar"
         },
@@ -88,7 +88,7 @@
       }
     },
     "navigation": {
-      "forUser": "Para ti"
+      "forUser": "Para tí"
     },
     "search": {
       "showOnlyFollowing": "Mostrar solo seguidos",
@@ -128,7 +128,7 @@
       "active": "Snippets activos",
       "deleted": "Snippets borrados",
       "following": {
-        "title": "Snippets For Tags que sigues",
+        "title": "Snippets Con Tags que sigues",
         "following": "Siguiendo"
       },
       "favorites": {
