--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -81,11 +81,12 @@
         "text1": "The following snippet has been marked as incorrect by the administrator.",
         "text2": "It may not work or be unsafe to use."
       },
-      "postingDate": "{date} at {time}",
+      "postingDateTime": "{month}/{day}/{year} at {time}",
       "snippetDeleted": "Successfully deleted snippet",
       "snippetRestored": "Successfully restored snippet",
       "copiedToClipboard": "Code copied to clipboard!"
-    }
+    },
+    "postingDate": "{month}/{day}/{year}"
   },
   "navigation": {
     "forUser": "For You"
