[Password Recovery] Bug fixes and enhancements

--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -173,7 +173,7 @@
       "repeatPassword": "Repetir Contraseña",
       "register": "Registrar",
       "resetPassword": "Resetear Contraseña",
-      "sendRecoveryEmail": "Envair",
+      "sendRecoveryEmail": "Enviar",
       "verificationCode": "Código de verificación",
       "sendVerificationCode": "Enviar",
       "noAccount": "Sin cuenta?",
