--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -89,6 +89,8 @@
         "postingDateTime": "{day}/{month}/{year} a las {time}",
         "snippetDeleted": "Snippet borrado correctamente",
         "snippetRestored": "Snippet restaurado correctamente",
+        "snippetFlagged": "Snippet marcado correctamente",
+        "snippetUnflagged": "Snippet desmarcado correctamente",
         "copiedToClipboard": "Código copiado al clipboard!"
       },
       "postingDate": "{day}/{month}/{year}"
