--- a/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_en.properties
@@ -132,6 +132,7 @@ error.401.snippet.fav=Unauthorized access! You can only favorite snippets when y
 error.401.snippet.report=Unauthorized access! You can only report snippets when you are logged in.
 error.403.snippet.report.reputation=Unauthorized access! You can only report snippets when you are have a high enough reputation.
 error.403.snippet.report.owner=Unauthorized access! You cannot report your own snippet!
+error.403.snippet.report.repeated= You cant report the same snippet twice
 error.403.snippet.report.dismiss=Unauthorized access! Only snippet owners can dismiss reports!
 error.401.snippet.flag=Unauthorized access! Only admins can flag snippets.
 error.403.profile.owner=Unauthorized access! This content can only be viewed by the owner of the profile.
