--- a/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
+++ b/tpe_paw/webapp/src/main/resources/i18n/messages_es.properties
@@ -132,6 +132,7 @@ error.401.snippet.fav=¡Acceso no autorizado! Solo puedes marcar snippets como f
 error.401.snippet.report=¡Acceso no autorizado! Solo puedes reportar snippets si inicias sesión
 error.403.snippet.report.reputation=¡Acceso no autorizado! Solo puedes reportar snippets si tienes una reputacion lo suficientemente alta
 error.403.snippet.report.owner=¡Acceso no autorizado! No puedes reportar tus propios snippets.
+error.403.snippet.report.repeated= No puedes reportar el mismo snippet varias veces
 error.403.snippet.report.dismiss=¡Acceso no autorizado! Solo el dueño del snippet puede descartar reportes.
 error.401.snippet.flag=¡Acceso no autorizado! Solo los administradores pueden marcar snippets
 error.403.snippet.create=Acceso no autorizado! No puedes crear snippets
