[Data Updates] First attempts at a fix + other small fixes

--- a/tpe_paw/frontend/src/locales/es.json
+++ b/tpe_paw/frontend/src/locales/es.json
@@ -140,7 +140,7 @@
       "active": "Snippets activos",
       "deleted": "Snippets borrados",
       "following": {
-        "title": "Snippets Con Tags que sigues",
+        "title": "Snippets Con Tags Que Sigues",
         "following": "Siguiendo"
       },
       "favorites": {
