--- a/tpe_paw/frontend/src/locales/en.json
+++ b/tpe_paw/frontend/src/locales/en.json
@@ -175,8 +175,8 @@
       "error": "Error while adding languages, try again later"
     },
     "confirmDeletion": "Confirm Deletion",
-    "languageDeletionDisclaimer": "Are you sure you want to delete \"{langName}\" from Languages? Deleted languages will no longer be available for new snippets and will not appear in the language list unless added again by an administrator.",
-    "tagDeletionDisclaimer": "Are you sure you want to delete \"{tagName}\" from Tags? Deleted tags will be removed from all the snippets containing it and from all users following list. This action cant be undone.",
+    "languageDeletionDisclaimer": "Are you sure you want to delete {langName} from Languages? Deleted languages will no longer be available for new snippets and will not appear in the language list unless added again by an administrator.",
+    "tagDeletionDisclaimer": "Are you sure you want to delete {tagName} from Tags? Deleted tags will be removed from all the snippets containing it and from all users following list. This action cant be undone.",
     "confirm": "Confirm",
     "cancel": "Cancel",
     "flagged": "Flagged"
